# libslater

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
lib/: Makefile.am  _root1.cc  _root2.cc  slatermem.cc  srootlist.h
src/: Makefile.am  check.cc  f77.h  generate.cc  local_macros.h  main.cc  root_weight.cc  util.cc
